--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"laracasts/validation": "~1.0"
 	},
 	"autoload": {
 		"classmap": [
@@ -14,7 +15,10 @@
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
-		]
+		],
+	"psr-4": {
+		"UG\\" : "app/UG"
+	}
 	},
 	"scripts": {
 		"post-install-cmd": [
@@ -32,5 +36,8 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "stable",
+	"require-dev": {
+		"way/generators": "2.*"
+	}
 }
